test/quantumIndexUpdate6.slq

def main(){
	x:=([0],[0,1]);
	i:=H(0);
	x[i]=[1]; /// error
	return (x,i);
}
